@@ -1,5 +1,10 @@
 2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* Don't include invalid mercator segments in terrainpage LOD calculations.
+	* Always show the tile that the camera is on in full detail.
+
+2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Added ability to scale the alpha textures for the splatting terrain. This is done with blur filtering thtough the use of devIL. The result is better looking terrain.
 	* Added dependency to devIL. Ogre already uses this, so it should be no big change.
 	* Bugfixes for segment and pages.
